# rad-ml-tutorials

./: .gitignore  .nojekyll  CNAME  README.md  _quarto.yml  about.html  about.qmd  advanced-setup.html  advanced-setup.qmd  index.html  index.qmd  index.xml  listings.json  pyproject.toml  resources.html  resources.qmd  robots.txt  search.json  setup.html  setup.qmd  sitemap.xml  walkthrough.html
.quarto/idx/: about.qmd.json  index.qmd.json
.quarto/xref/: 33d1b4ed  45843913  5e1dd103  85eff2d1  93812de4  INDEX  be721587
_site/: about.html  index.html  index.xml  search.json  sitemap.xml
_site/posts/: ACR_contrast_manual_chat.html  Image_Classification_Tutorial.html
notebooks/: RNNs_tutorial.html  RNNs_tutorial.ipynb  RNNs_tutorial.out.ipynb  Transformers_tutorial.html  Transformers_tutorial.ipynb  Transformers_tutorial.out.ipynb  ollama_colab.html  ollama_colab.ipynb
posts/: ACR_contrast_manual_chat.html  ACR_contrast_manual_chat.ipynb  Image_Classification_Tutorial.html  Image_Classification_Tutorial.ipynb  RNNs_tutorial.html  RNNs_tutorial.ipynb  Transformers_tutorial.html  Transformers_tutorial.ipynb  install-python.html  install-python.qmd  install-pytorch.html  install-pytorch.qmd  intro_NLP.qmd  intro_cli.html  intro_cli.qmd  llama-cpp-radiology-report-labeling.html  llama-cpp-radiology-report-labeling.ipynb
posts/.ipynb_checkpoints/: ACR_contrast_manual_chat-checkpoint.ipynb  Image_Classification_Tutorial-checkpoint.ipynb  llama-cpp-radiology-report-labeling-checkpoint.ipynb
posts/post-with-code/: index.html
site_libs/bootstrap/: bootstrap.min.css  (+1 more)
(+5 files in other folders)
